# chister

./: AnalysisProgram.cpp  AnalysisProgram.h  AnalysisProgramGUI.cpp  AnalysisProgramGUI.h  CMakeLists.txt  ECS02.cpp  ECS02.h  ECS02UI.cpp  ECS02UI.h  ECS02UI.ui  FrameGrabber.cpp  FrameGrabber.h  ImageScanAnalysis.cpp  ImageScanAnalysis.h  MicroZedHCC.cpp  MicroZedHCC.h  QOpenCVHelpers.cxx  QOpenCVHelpers.h  README.md  SerialDevice.cpp  SerialDevice.h  SwissHCCAnalysis.cpp  SwissHCCAnalysis.h  SwissHCCAnalysisGUI.cpp  SwissHCCAnalysisGUI.h  SwissHCC_ChipTestForm.cpp  SwissHCC_ChipTestForm.h  SwissHCC_ChipTestForm.ui  SwissHCC_ConfigureForm.cpp  SwissHCC_ConfigureForm.h  SwissHCC_ConfigureForm.ui  SwissHCC_CrossAlignForm.cpp  SwissHCC_CrossAlignForm.h  SwissHCC_CrossAlignForm.ui  SwissHCC_InfoForm.cpp  SwissHCC_InfoForm.h  SwissHCC_InfoForm.ui  SwissHCC_LoadChipsForm.cpp  SwissHCC_LoadChipsForm.h  SwissHCC_LoadChipsForm.ui  (+12 more)
cmake/Modules/: FindNIIMAQ.cmake
data/SwissHCCTemplates/HCC/: config.ini
jupyter/: FindProbesAvg.ipynb
src/: AnalysisProgram.cpp  AnalysisProgram.h  AnalysisProgramGUI.cpp  AnalysisProgramGUI.h  CMakeLists.txt  Definitions.h  DialogMoveTo.cpp  DialogMoveTo.h  DialogMoveTo.ui  DialogSetIncrement.cpp  DialogSetIncrement.h  DialogSetIncrement.ui  DicedChipAnalysis.cpp  DicedChipAnalysis.h  DicedChipAnalysisGUI.cpp  DicedChipAnalysisGUI.h  DicedChipPreferencesForm.cpp  DicedChipPreferencesForm.h  DicedChipPreferencesForm.ui  DicedChipSlot.cpp  DicedChipSlot.h  DicedChipTemplate.cpp  DicedChipTemplate.h  DicedChipTemplateLabel.cpp  DicedChipTemplateLabel.h  DicedChipTemplateManager.cpp  DicedChipTemplateManager.h  DicedChip_ChipAlignForm.cpp  DicedChip_ChipAlignForm.h  DicedChip_ChipAlignForm.ui  DicedChip_ChipTestForm.cpp  DicedChip_ChipTestForm.h  DicedChip_ChipTestForm.ui  DicedChip_ConfigureForm.cpp  DicedChip_ConfigureForm.h  DicedChip_ConfigureForm.ui  DicedChip_CrossAlignForm.cpp  DicedChip_CrossAlignForm.h  DicedChip_CrossAlignForm.ui  DicedChip_InfoForm.cpp  (+83 more)
