CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)

PROJECT(chister)

SET(CMAKE_AUTOMOC ON)
SET(CMAKE_AUTOUIC ON)

FIND_PACKAGE(Qt5Widgets REQUIRED)
FIND_PACKAGE(Qt5Multimedia REQUIRED)
FIND_PACKAGE(Qt5MultimediaWidgets REQUIRED)
FIND_PACKAGE(Qt5SerialPort REQUIRED)

FIND_PACKAGE(OpenCV REQUIRED)

ADD_SUBDIRECTORY(src)
