CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)

PROJECT(chister)

LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/modules)

SET(CMAKE_AUTOMOC ON)
SET(CMAKE_AUTOUIC ON)
SET(CMAKE_AUTORCC ON)

FIND_PACKAGE(Qt5Widgets REQUIRED)
FIND_PACKAGE(Qt5SerialPort REQUIRED)

FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(NIIMAQ)

ADD_SUBDIRECTORY(src)
