CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

PROJECT(chister)

LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/modules)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(CMAKE_AUTOMOC ON)
SET(CMAKE_AUTOUIC ON)
SET(CMAKE_AUTORCC ON)

FIND_PACKAGE(Qt5Widgets REQUIRED)
FIND_PACKAGE(Qt5SerialPort REQUIRED)

FIND_PACKAGE(OpenCV REQUIRED)
IF (WIN32)
  FIND_PACKAGE(NIIMAQ)
ENDIF (WIN32)

ADD_SUBDIRECTORY(src)
